<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_dodaj"
        android:checkable="false"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/dodaj_glasbilo" />

    <item
        android:id="@+id/menu_profil"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/mrb_star_icon_black_36dp"
        android:title="@string/profil"
        android:visible="true" />

    <item
        android:id="@+id/menu_pogovori"
        android:enabled="true"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/pogovori"
        android:visible="true" />

    <item
        android:id="@+id/menu_kosarica"
        android:enabled="true"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/kosarica"
        android:visible="true" />

    <item
        android:id="@+id/menu_odjava"
        android:enabled="true"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/odjava"
        android:visible="true" />

</menu>
